--- a/src/assets/public.css
+++ b/src/assets/public.css
@@ -91,3 +91,20 @@ body{
     text-overflow: ellipsis;
     white-space: nowrap
 }
+header {
+    height: 120px;
+    text-align: center;
+    color: #777;
+    padding: 0 20px;
+    box-sizing: border-box;
+
+}
+header p {
+    height: 50px;
+}
+
+header h1 {
+    font-size: 26px;
+    height: 60px;
+    line-height: 60px;
+}
