--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -115,7 +115,7 @@
 
                 /* 当设备宽度小于等于600px时 */
                 .input-warp {
-                    width: 70%;
+                    width: 100%;
 
                 }
             }
@@ -156,11 +156,12 @@
 
         /* 当设备宽度小于等于600px时 */
         .iframe {
-            width: 90%;
+            width: 100%;
             height: 240px;
         }
         .control-warp{
-            width: 90%;
+            width: 100%;
+            padding: 0 5px;
         }
     }
 
