--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -68,17 +68,18 @@
             .live-item:hover{
                 color: #7d89fa;
             }
+            .live-item.on{color: #4d74f5;}
             .hd-lable{
-                margin-right: 20px;
+                margin-right: 10px;
                 color: #484848;
                 font-size: 18px;
-                flex: 1;
+                flex: 2;
             }
             .input-warp {
                 display: inline-block;
                 position: relative;
                 height: 40px;
-                flex: 9;
+                flex: 11;
             }
             .icon-play {
                 position: absolute;
@@ -139,7 +140,7 @@
         width: 100%;
         height: 100%;
     }
-
+    
     @media only screen and (max-width: 992px) {
 
         /* 当设备宽度小于等于992px时 */
