--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -83,14 +83,24 @@
             }
             .icon-play {
                 position: absolute;
-                width: 40px;
-                height: 40px;
+                width: 36px;
+                height: 36px;
                 background: url('../../assets/player.png') no-repeat 0 1px;
-                background-size: 100%;
-                right: 0;
+                background-size: 30px 30px;
+                background-position: 0 4px;
+                right: 2px;
                 top: 0;
             }
-
+            .icon-search {
+                position: absolute;
+                width: 36px;
+                height: 36px;
+                background: url('../../assets/search.png') no-repeat 0 1px;
+                background-size: 30px 30px;
+                background-position: 0 4px;
+                right: 2px;
+                top: 0;
+            }
             input {
                 width: 100%;
                 height: 100%;
